[gd_scene load_steps=3 format=3 uid="uid://c7vx2qm1kp8yt"]

[ext_resource type="Script" path="res://scripts/bullet.gd" id="1_bullet"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bullet"]
radius = 4.0

[node name="Bullet" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_bullet")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bullet")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.8, 0, 1)
scale = Vector2(0.5, 0.5)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
